assets/css/Consulta.css
@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap");

/*  styling scrollbars  */
::-webkit-scrollbar {
  width: 5px;
  height: 6px;
}

::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px #a5aaad;
  border-radius: 10px;
}

::-webkit-scrollbar-thumb {
  background: #ff0000;
  border-radius: 10px;
}

::-webkit-scrollbar-thumb:hover {
  background: #a5aaad;
}

* {
  margin: 0;
  padding: 0;
}

body {
  box-sizing: border-box;
  font-family: "Lato", sans-serif;
}

.text-primary-p {
  color: #7d7d7e;
  font-size: 14px;
  font-weight: 700;
}

.font-bold {
  font-weight: 700;
}

.text-title {
  color: #93c9ff;
}

.text-lightblue {
  color: #9df0ff;
}

.text-red {
  color: #cc3d38;
}

.text-yellow {
  color: #fde080;
}

.text-green {
  color: #aeff80;
}

.container {
  display: grid;
  height: 100vh;
  grid-template-columns: 0.8fr 1fr 1fr 1fr;
  grid-template-rows: 0.2fr 3fr;
  grid-template-areas:
    "sidebar nav nav nav"
    "sidebar main main main";
  /* grid-gap: 0.2rem; */
}

.navbar {
  background: #ffffff;
  grid-area: nav;
  height: 60px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 0 30px 0 30px;
  border-bottom: 1px solid rgb(128, 128, 128);
}

.nav_icon {
  display: none;
}

.nav_icon > i {
  font-size: 26px;
  color: #a5aaad;
}

.navbar__left > a {
  margin-right: 30px;
  text-decoration: none;
  color: #a5aaad;
  font-size: 15px;
  font-weight: 700;
}

.navbar__left .active_link {
  color: #265acc;
  border-bottom: 3px solid #265acc;
  padding-bottom: 12px;
}

.navbar__right {
  display: flex;
  justify-content: center;
  align-items: center;
}

.navbar__right > a {
  margin-left: 20px;
  text-decoration: none;
}

.navbar__right > a > i {
  color: #a5aaad;
  font-size: 16px;
  border-radius: 50px;
  background: #ffffff;
  box-shadow: 2px 2px 5px #d9d9d9, -2px -2px 5px #ffffff;
  padding: 7px;
}

main {
  background: #ffffff;
  grid-area: main;
  overflow-y: auto;
}

.main__container {
  padding: 20px 35px;
  background-color: rgb(255, 255, 255);
}

.main__title {
  display: flex;
  align-items: center;
}

.main__title > img {
  max-height: 100px;
  object-fit: contain;
  margin-right: 20px;
}

.main__greeting > h1 {
  font-size: 24px;
  color: #2e4a66;
  margin-bottom: 5px;
}

.main__greeting > p {
  font-size: 14px;
  font-weight: 700;
  color: #a5aaad;
}

.main__cards {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  gap: 30px;
  margin: 20px 0;
}

.card {
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  height: 70px;
  padding: 25px;
  border-radius: 5px;
  background: #000000;
}

.card_inner {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.card_inner > span {
  font-size: 25px;
}

.charts {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 30px;
  margin-top: 50px;
}

.charts__left {
  padding: 25px;
  border-radius: 5px;
  background: #000000;
}

.charts__left__title {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.charts__left__title > div > h1 {
  font-size: 24px;
  color: #2e4a66;
  margin-bottom: 5px;
}

.charts__left__title > div > p {
  font-size: 14px;
  font-weight: 700;
  color: #a5aaad;
}

.charts__left__title > i {
  color: #ffffff;
  font-size: 20px;
  background: #ffc100;
  border-radius: 200px 0px 200px 200px;
  -moz-border-radius: 200px 0px 200px 200px;
  -webkit-border-radius: 200px 0px 200px 200px;
  border: 0px solid #000000;
  padding: 15px;
}

.charts__right {
  padding: 25px;
  border-radius: 5px;
  background: #000000;
}

.charts__right__title {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.charts__right__title > div > h1 {
  font-size: 24px;
  color: #2e4a66;
  margin-bottom: 5px;
}

.charts__right__title > div > p {
  font-size: 14px;
  font-weight: 700;
  color: #a5aaad;
}

.charts__right__title > i {
  color: #ffffff;
  font-size: 20px;
  background: #39447a;
  border-radius: 200px 0px 200px 200px;
  -moz-border-radius: 200px 0px 200px 200px;
  -webkit-border-radius: 200px 0px 200px 200px;
  border: 0px solid #000000;
  padding: 15px;
}

.charts__right__cards {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 20px;
  margin-top: 30px;
}

.card1 {
  background: #d1ecf1;
  color: #35a4ba;
  text-align: center;
  padding: 25px;
  border-radius: 5px;
  font-size: 14px;
}

.card2 {
  background: #d2f9ee;
  color: #38e1b0;
  text-align: center;
  padding: 25px;
  border-radius: 5px;
  font-size: 14px;
}

.card3 {
  background: #d6d8d9;
  color: #3a3e41;
  text-align: center;
  padding: 25px;
  border-radius: 5px;
  font-size: 14px;
}

.card4 {
  background: #fddcdf;
  color: #f65a6f;
  text-align: center;
  padding: 25px;
  border-radius: 5px;
  font-size: 14px;
}

/*  SIDEBAR STARTS HERE  */

#sidebar {
  background: #020509;
  grid-area: sidebar;
  overflow-y: auto;
  padding: 20px;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
}

.sidebar__title {
  display: flex;
  justify-content: space-between;
  align-items: right;
  color: #f3f4f6;
  margin-bottom: 10px;
  /* color: #E85B6B; */
}

.sidebar__img {
  display: flex;
  align-items: center;
}

.sidebar__title > div > img {
  width: 75px;
  object-fit: contain;
}

.sidebar__title > div > h1 {
  font-size: 18px;
  display: inline;
}

.sidebar__title > i {
  font-size: 18px;
  display: none;
}

.sidebar__menu > h2 {
  color: #ff0000;
  font-size: 16px;
  margin-top: 15px;
  margin-bottom: 5px;
  padding: 0 10px;
  font-weight: 700;
}

.sidebar__link {
  color: #f3f4f6;
  padding: 10px;
  border-radius: 3px;
  margin-bottom: 5px;
}

.active_menu_link {
  background: rgba(255, 0, 0, 0.3);
  color: #ff0000;
}

.active_menu_link a {
  color: #ff0000 !important;
}

.sidebar__link > a {
  text-decoration: none;
  color: #a5aaad;
  font-weight: 700;
}

.sidebar__link > i {
  margin-right: 10px;
  font-size: 18px;
}

.sidebar__logout {
  margin-top: 20px;
  padding: 10px;
  color: #e65061;
}

.sidebar__logout > a {
  text-decoration: none;
  color: #e65061;
  font-weight: 700;
  text-transform: uppercase;
}

.sidebar__logout > i {
  margin-right: 10px;
  font-size: 18px;
}

.sidebar_responsive {
  display: inline !important;
  z-index: 9999 !important;
  left: 0 !important;
  position: absolute;
}

@media only screen and (max-width: 978px) {
  .container {
    grid-template-columns: 1fr;
    /* grid-template-rows: 0.2fr 2.2fr; */
    grid-template-rows: 0.2fr 3fr;
    grid-template-areas:
      "nav"
      "main";
  }

  #sidebar {
    display: none;
  }

  .sidebar__title > i {
    display: inline;
  }

  .nav_icon {
    display: inline;
  }
}

@media only screen and (max-width: 855px) {
  .main__cards {
    grid-template-columns: 1fr;
    gap: 10px;
    margin-bottom: 0;
  }

  .charts {
    grid-template-columns: 1fr;
    margin-top: 30px;
  }
}

@media only screen and (max-width: 480px) {
  .navbar__left {
    display: none;
  }
}

/*------------------------------------------------------------------------*/

.form {
  margin-top: 0rem;
	width: 200%;
	height: 75%;
	border: 2px solid rgb(255, 255, 255);
	border-radius: 0px;
	background-color: rgb(255, 255, 255);
	position: relative;
	color: rgb(0, 0, 0);
	transform: translate (-50%, -50%);
	padding: 50px 20px;
  display: flex;
  flex-direction: column;
}

.columns {
  display: flex;
  justify-content: left;
  align-items: left;
}

.column {
  padding: 0 0 0 40px;
}

.inputs-form{
    display: flex;
}

/* Divs dos botões radio classificação cliente */
.wrapper {
    margin-top: .8rem;
    display: flex;
}

.wrapper:first-child {
    margin-right: 2.5rem;
}

.wrapper label {
    margin: 0 .5rem;
}

/* Aparencia do botão rádio classificação cliente */
.wrapper input[type=radio] {
    border-radius: 50%;
    width: 30px;
    height: 15px;  
    position: relative;
    top: 1px;
}

#labelClassificacaoCliente {
    display: block;
    width: 100%;
}

.column {
    padding: 0 0 0 40px;
}

#LabelsRadios{
  margin-left: 100%;
}

.btn-group {
    display: flex;
    justify-content: center;
    align-items: center;
}

.btn-group button {
    margin: 0 1rem;
}

.header-form {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 2rem;
}

.classificacao-cliente {
    margin-top: -1.9rem;
    margin-right: -120px;
}

.classificacao-cliente label {
    padding: -0 .1rem;
}

h1 {
    padding-left: 12rem;
	margin: 0;
	padding-top: -30px;
	padding-bottom: 40px;
	letter-spacing: 10px;
	text-transform: uppercase;
	font-size: 15px;
}

.form p {
	margin: 0;
	padding: 0;
	font-weight: bold;
	color: rgb(0, 0, 0);
}

.form input {
	width: 100%;
	margin-bottom: 21px;
    
    margin-bottom: 2rem;
}

label {
    cursor: pointer;
}

/*Aparencia dos Inputs*/
.form input[type="text"], .form input[type="date"]{
	border: none;
	border-bottom: 1px solid rgb(0, 0, 0);
	background: transparent;
	outline: none;
	height: 25px;
	color: rgb(0, 0, 0);
	font-size: 16px;
	color: rgba(255);
}

/*Aparencia dos botoes*/
button.btn {
	border: none;
	outline: none;
	height: 35px;
    width: 200px;
	color: rgb(255, 255, 255);
	background: rgb(0, 0, 0);
	border-radius: 20px;
	transition: 0.2s;
    cursor: pointer;
}

#VerMaisCLiente{
  text-decoration: none;
  background-color: #000000;
  display: block;
  color: rgb(255, 255, 255);
  height: 35px;
  width: 80px;
  padding: 9px;
  text-align: center;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 14px;
  border-radius: 20px;
transition: 0.2s;
  cursor: pointer;
}

/*Aparencia dos Inputs com foco*/
.form input[type="text"]:focus,
.form input[type="date"]:focus{
    border-color: red;
	color: rgb(255, 0, 0);
	color: rgb(0, 0, 0);
}

table{
  width: 90%;
  table-layout: fixed;
  word-wrap: break-word;
  border: 1px solid rgb(0, 0, 0);
  color: rgb(0, 0, 0);
}

/*Aparencia dos botoes com o mouse*/
button.btn:hover {
	cursor: pointer;
	background: rgb(255, 0, 0);
	transition: 0.2s;         
}

#VerMaisCliente:hover{
cursor: pointer;
background: rgb(255, 0, 0);
transition: 0.2s; 
}

#iCantoBotao{
  padding-left: 50px;
  border: none;
}

@media (max-width: 912px) {
    .inputs-form {
        display: flex;
        justify-content: center;
        align-items: center;

        flex-direction: column;

        margin-bottom: 1rem;
    }

    .btn-group {
        margin-bottom: 3rem;
    }
}

@media (max-width: 640px) {
    .form {
        width: 100%;
    }
}

@media (max-width: 400px) {
    .form {
        padding: 0 15px;
        border-radius: .25rem;
    }

    .form h1 {
        margin-top: 1.2rem;
    }
}

